--- a/tongzhousheche/src/main/resources/views/modules/manager/scparkcheck.html
+++ b/tongzhousheche/src/main/resources/views/modules/manager/scparkcheck.html
@@ -22,34 +22,56 @@
 <script src="../../plugins/jqgrid/jquery.jqGrid.min.js"></script>
 <script src="../../plugins/ztree/jquery.ztree.all.min.js"></script>
 <script src="../../js/common.js"></script>
+<style type ="text/css">
+	.kuan{
+		width:190px;
+	}
+
+</style>
 </head>
 <body>
 	<div id="rrapp" v-cloak>
 		<div v-show="showList">
-			<div class="grid-btn">
-				<div class="form-group col-sm-2">
+			<div class="grid-btn" style="overflow: hidden;">
+				<div class="form-group col-sm-1">
+					<label style="font-size: medium">车牌号：</label>
+				</div>
+				<div class="form-group col-sm-2 kuan">
 					<input type="text" class="form-control" id="cph" v-model="q.cph"
 						placeholder="车牌号">
 				</div>
-				<div class="form-group col-sm-2">
+				<div class="form-group col-sm-1">
+					<label style="font-size: medium">停车场区划：</label>
+				</div>
+				<div class="form-group col-sm-2 kuan">
 					<input type="text" class="form-control" id="park" v-model="q.park"
 						placeholder="停车场区划">
 				</div>
-				<div class="form-group col-sm-2">
+				<div class="form-group col-sm-1">
+					<label style="font-size: medium">停车场地址：</label>
+				</div>
+				<div class="form-group col-sm-2 kuan">
 					<input type="text" class="form-control" id="address"
 						v-model="q.address" placeholder="停车场地址">
 				</div>
-				<div class="form-group col-sm-2">
+				<div class="form-group col-sm-1">
+					<label style="font-size: medium">起始时间：</label>
+				</div>
+				<div class="form-group col-sm-2 kuan">
 					<input type="text" class="form-control" id="startTime"
 						readonly="readonly" placeholder="起始时间">
 				</div>
-				<div class="form-group col-sm-2">
+				<div class="form-group col-sm-1">
+					<label style="font-size: medium">结束时间：</label>
+				</div>
+				<div class="form-group col-sm-2 kuan">
 					<input type="text" class="form-control" id="endTime"
 						readonly="readonly" placeholder="结束时间">
 				</div>
-				<a class="btn btn-default" style="background: #337ab7; color: #fff;"
-					id="check" @click="jk">查询</a>
-
+				<div align="right">
+					<a class="btn btn-default" style="background: #337ab7; color: #fff;" id="check" @click="jk">查询</a>
+				</div>
+				<!--<a class="btn btn-default" style="background: #337ab7; color: #fff;" id="check" @click="jk">查询</a>-->
 			</div>
 			<table id="jqGrid"></table>
 			<div id="jqGridPager"></div>
@@ -58,9 +80,9 @@
 	<script src="../../js/modules/manager/scparkcheck.js"></script>
 	<script src="../../vasMap/laydate-master/dist/laydate.js"></script>
 	<style>
-      .col-sm-2 {
-	      width: 18%;
-      }
+      /*.col-sm-2 {*/
+	      /*width: 18%;*/
+      /*}*/
      .ui-jqgrid .ui-jqgrid-btable tbody tr.jqgrow td {
 	     line-height: 42px;
       }
