--- a/tongzhousheche/src/main/resources/static/vasMap/views/dclrelitu.html
+++ b/tongzhousheche/src/main/resources/static/vasMap/views/dclrelitu.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>113卡口热力图</title>
+    <title>大车流热力图</title>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
@@ -31,8 +31,14 @@
 <div id="rrapp" v-cloak style="position:absolute;top:0px;left:0px;right:0px;width:100%;height:50px;">
 	<div v-show="showList">
 		<div class="grid-btn">
+			<div class="form-group col-sm-1">
+				<label style="font-size: medium">开始时间：</label>
+			</div>
 			<div class="form-group col-sm-2">
 				<input type="text" class="form-control" id="qssj" v-model="q.qssj" @keyup.enter="query" placeholder="起始时间" readonly="readonly">
+			</div>
+			<div class="form-group col-sm-1">
+				<label style="font-size: medium">结束时间：</label>
 			</div>
 			<div class="form-group col-sm-2">
 				<input type="text" class="form-control" id="jssj" v-model="q.jssj" @keyup.enter="query" placeholder="结束时间" readonly="readonly">
