--- a/tongzhousheche/src/main/resources/static/vasMap/views/screlitu.html
+++ b/tongzhousheche/src/main/resources/static/vasMap/views/screlitu.html
@@ -34,9 +34,15 @@
 </head>
 <body>
 	<div id="rrapp" >
+		<div class="form-group col-sm-1">
+			<label style="font-size: medium">起始时间：</label>
+		</div>
 			<div class="form-group col-sm-2">
 				<input type="text" class="form-control" id="qssj" v-model="q.qssj" @keyup.enter="query" placeholder="起始时间" readonly="readonly">
 			</div>
+		<div class="form-group col-sm-1">
+			<label style="font-size: medium">结束时间：</label>
+		</div>
 			<div class="form-group col-sm-2">
 				<input type="text" class="form-control" id="jssj" v-model="q.jssj" @keyup.enter="query" placeholder="结束时间" readonly="readonly">
 			</div>
