--- a/tongzhousheche/src/main/resources/views/modules/generator/scvehiclegs.html
+++ b/tongzhousheche/src/main/resources/views/modules/generator/scvehiclegs.html
@@ -27,15 +27,24 @@
 <div id="rrapp" v-cloak >
 	<div v-show="showList">
 	    <div class="grid-btn">
+			<div class="form-group col-sm-1">
+				<label style="font-size: medium">省份：</label>
+			</div>
 				<div class="form-group col-sm-2">
 					<input type="text" class="form-control" id="province" placeholder="省份">
 				</div>
+			<div class="form-group col-sm-1">
+				<label style="font-size: medium">开始时间：</label>
+			</div>
 					<div class="form-group col-sm-2" id="div1"
 					style="width: 268px; height: 34px;">
 					<input type="text" class="form-control" id="entertime"
 						 name="entertime" readonly="readonly" onblur="SetQssj(this.value);" 
 						placeholder="开始时间">
 				</div>
+			<div class="form-group col-sm-1">
+				<label style="font-size: medium">结束时间：</label>
+			</div>
 				<div class="form-group col-sm-2" id="div2"
 					style="width: 268px; height: 34px;">
 					<input type="text" class="form-control" id="exittime" readonly="readonly"
