--- a/tongzhousheche/src/main/resources/views/modules/manager/sckkcheck.html
+++ b/tongzhousheche/src/main/resources/views/modules/manager/sckkcheck.html
@@ -31,9 +31,14 @@
 <div id="rrapp" v-cloak>
 	<div v-show="showList">
 		<div class="grid-btn" style="overflow: hidden;">
+			<div class="form-group col-sm-1">
+				<label style="font-size: medium">车牌号：</label>
+			</div>
 			<div class="form-group col-sm-2 kuandu">
 				<input type="text" class="form-control" id="cph" v-model="q.cph"  @keyup.enter="query" placeholder="车牌号">
-				
+			</div>
+			<div class="form-group col-sm-1">
+				<label style="font-size: medium">车辆品牌：</label>
 			</div>
 			<div class="form-group col-sm-2 kuandu" >
 				<select id="brand" class="moreChoose" style="width:160px;">
@@ -43,25 +48,46 @@
 <!-- 			<div class="form-group col-sm-2 kuandu" > -->
 <!-- 				<input type="text" class="form-control" id="qclass" v-model="q.qclass" @keyup.enter="query" placeholder="车辆类型"> -->
 <!-- 			</div> -->
+			<div class="form-group col-sm-1">
+				<label style="font-size: medium">车牌种类：</label>
+			</div>
 			<div class="form-group col-sm-2 kuandu" >
 				<input type="text" class="form-control" id="pclass" v-model="q.pclass" @keyup.enter="query" placeholder="车牌种类">
+			</div>
+			<div class="form-group col-sm-1">
+				<label style="font-size: medium">乘客人数：</label>
 			</div>
 			<div class="form-group col-sm-2 kuandu" >
 				<input type="text" class="form-control" id="numOfPassenger" v-model="q.numOfPassenger" @keyup.enter="query" placeholder="乘客人数（以上）">
 			</div>
+			<div class="form-group col-sm-1">
+				<label style="font-size: medium">起始时间：</label>
+			</div>
 			<div class="form-group col-sm-2 kuandu" >
 				<input  type="text" class="form-control"  id="startTime" readonly="readonly" placeholder="起始时间">	
+			</div>
+			<div class="form-group col-sm-1">
+				<label style="font-size: medium">结束时间：</label>
 			</div>
 			<div class="form-group col-sm-2 kuandu" >
 				<input type="text" class="form-control" id="endTime" readonly="readonly" placeholder="结束时间">
 			</div>
+			<div class="form-group col-sm-1">
+				<label style="font-size: medium">行车速度：</label>
+			</div>
 			<div class="form-group col-sm-2 kuandu">
 				<input type="text" class="form-control" id="speed" v-model="q.speed" @keyup.enter="query" placeholder="行车速度(km/h)以上">
+			</div>
+			<div class="form-group col-sm-1">
+				<label style="font-size: medium">车辆颜色：</label>
 			</div>
 			<div class="form-group col-sm-2 kuandu" >
 				 <select id="color" class="moreChoose" style="width:160px;">
 			 		<option value ="">车辆颜色</option>
 			     </select>
+			</div>
+			<div class="form-group col-sm-1">
+				<label style="font-size: medium">车牌颜色：</label>
 			</div>
 		    <div class="form-group col-sm-2 kuandu" >
 				 <select id="paltecolor" class="moreChoose" style="width:160px;">
@@ -73,6 +99,9 @@
 			 		<option value ="9">绿色</option>
 			     </select>
 			</div>
+			<div class="form-group col-sm-1">
+				<label style="font-size: medium">数据来源：</label>
+			</div>
 			<div class="form-group col-sm-2 kuandu" >
 			     <select id="sjly" class="moreChoose" style="width:160px;">
 			        <option value ="">数据来源</option>
@@ -80,12 +109,18 @@
                     <option value ="k">微卡口</option>
                  </select>
 			</div>
+			<div class="form-group col-sm-1">
+				<label style="font-size: medium">安全带状态：</label>
+			</div>
 			<div class="form-group col-sm-2 kuandu" >
 			       <select id="safetyBelt" class="moreChoose" style="width:160px;">
                     <option value ="">安全带状态</option>
                     <option value ="0">未系</option>
                     <option value ="1">有系</option>
                  </select>
+			</div>
+			<div class="form-group col-sm-1">
+				<label style="font-size: medium">打电话状态：</label>
 			</div>
 			<div class="form-group col-sm-2 kuandu" >
 			       <select id="calling" class="moreChoose" style="width:160px;">
