--- a/tongzhousheche/src/main/resources/views/modules/manager/sckkfast.html
+++ b/tongzhousheche/src/main/resources/views/modules/manager/sckkfast.html
@@ -39,20 +39,20 @@
 						@keyup.enter="query" placeholder="车牌号">
 
 				</div>
-				<!-- 			<div class="form-group col-sm-2 kuandu" > -->
-				<!-- 				<select id="brand" class="moreChoose" style="width:160px;"> -->
-				<!-- 			 		<option value ="">车辆品牌</option> -->
-				<!-- 			     </select> -->
-				<!-- 			</div> -->
-				<!-- 			<div class="form-group col-sm-2 kuandu" > -->
-				<!-- 				<input type="text" class="form-control" id="qclass" v-model="q.qclass" @keyup.enter="query" placeholder="车辆类型"> -->
-				<!-- 			</div> -->
-				<!-- 			<div class="form-group col-sm-2 kuandu" > -->
-				<!-- 				<input type="text" class="form-control" id="pclass" v-model="q.pclass" @keyup.enter="query" placeholder="车牌种类"> -->
-				<!-- 			</div> -->
-				<!-- 			<div class="form-group col-sm-2 kuandu" > -->
-				<!-- 				<input type="text" class="form-control" id="numOfPassenger" v-model="q.numOfPassenger" @keyup.enter="query" placeholder="乘客人数（以上）"> -->
-				<!-- 			</div> -->
+				 			<div class="form-group col-sm-2 kuandu" >
+				 				<select id="brand" class="moreChoose" style="width:160px;">
+				 			 		<option value ="">车辆品牌</option>
+				 			     </select>
+				 			</div>
+				 			<div class="form-group col-sm-2 kuandu" >
+				 				<input type="text" class="form-control" id="qclass" v-model="q.qclass" @keyup.enter="query" placeholder="车辆类型">
+				 			</div>
+				 			<div class="form-group col-sm-2 kuandu" >
+				 				<input type="text" class="form-control" id="pclass" v-model="q.pclass" @keyup.enter="query" placeholder="车牌种类">
+				 			</div>
+				 			<div class="form-group col-sm-2 kuandu" >
+				 				<input type="text" class="form-control" id="numOfPassenger" v-model="q.numOfPassenger" @keyup.enter="query" placeholder="乘客人数（以上）">
+				 			</div>
 				<div class="form-group col-sm-2 kuandu">
 					<input type="text" class="form-control" id="startTime"
 						readonly="readonly" placeholder="起始时间">
