--- a/tongzhousheche/src/main/resources/views/modules/manager/sckkcheck.html
+++ b/tongzhousheche/src/main/resources/views/modules/manager/sckkcheck.html
@@ -17,6 +17,7 @@
 	<script src="../../libs/vue.min.js"></script>
 	<script src="../../libs/jquery-ui.js"></script>
 	<script src="../../libs/jquery-ui.min.js"></script>
+	<link rel="stylesheet" href="../../css/jquery-ui.css">
 <script src="../../libs/validator.min.js"></script>
 <script src="../../plugins/jqgrid/grid.locale-cn.js"></script>
 <script src="../../plugins/jqgrid/jquery.jqGrid.min.js"></script>
@@ -28,24 +29,7 @@
  .kuandu{
  width:190px;
  }
- .custom-combobox {
-     position: relative;
-     display: inline-block;
- }
- .custom-combobox-toggle {
-     position: absolute;
-     top: 0;
-     bottom: 0;
-     margin-left: -1px;
-     padding: 0;
-     /* 支持： IE7 */
-     *height: 1.7em;
-     *top: 0.1em;
- }
- .custom-combobox-input {
-     margin: 0;
-     padding: 0.3em;
- }
+
  </style>
 </head>
 <body>
@@ -62,7 +46,7 @@
 				<label style="font-size: medium">车辆品牌：</label>
 			</div>
 			<div class="form-group col-sm-2 kuandu" >
-				<select id="brand" class="moreChoose" style="width:160px;">
+				<select id="brand" class="form-control" style="width:160px;">
 			 		<option value ="">车辆品牌</option>
 			     </select>
 				<!--<input id="brand" class="form-control" placeholder="车辆品牌">-->
@@ -166,7 +150,7 @@
 
         $(function() {
             //kaName();
-            ppName();
+            // ppName();
         //  轨迹回放
         	$("#back").click(function () {
         		 var carNum=$(this).val("data");
@@ -237,109 +221,108 @@
             });
         }
 
-        // (function( $ ) {
-        //     $.widget( "custom.combobox", {
-        //         _create: function() {
-        //             this.wrapper = $( "<span>" )
-        //                 .addClass( "custom-combobox" )
-        //                 .insertAfter( this.element );
-        //
-        //             this.element.hide();
-        //             this._createAutocomplete();
-        //
-        //         },
-        //
-        //         _createAutocomplete: function() {
-        //             var selected = this.element.children( ":selected" ),
-        //                 value = selected.val() ? selected.text() : "";
-        //                 alert(value);
-        //             this.input = $( "<input>" )
-        //                 .appendTo( this.wrapper )
-        //                 .val( value )
-        //                 .attr( "title", "" )
-        //                 .addClass( "custom-combobox-input ui-widget ui-widget-content ui-state-default ui-corner-left" )
-        //                 .autocomplete({
-        //                     delay: 0,
-        //                     minLength: 0,
-        //                     source: $.proxy( this, "_source" )
-        //                 })
-        //                 .tooltip({
-        //                     tooltipClass: "ui-state-highlight"
-        //                 });
-        //
-        //             this._on( this.input, {
-        //                 autocompleteselect: function( event, ui ) {
-        //                     ui.item.option.selected = true;
-        //                     this._trigger( "select", event, {
-        //                         item: ui.item.option
-        //                     });
-        //                 },
-        //
-        //                 autocompletechange: "_removeIfInvalid"
-        //             });
-        //         },
-        //
-        //
-        //
-        //         _source: function( request, response ) {
-        //             var matcher = new RegExp( $.ui.autocomplete.escapeRegex(request.term), "i" );
-        //             response( this.element.children( "option" ).map(function() {
-        //                 var text = $( this ).text();
-        //                 if ( this.value && ( !request.term || matcher.test(text) ) )
-        //                     return {
-        //                         label: text,
-        //                         value: text,
-        //                         option: this
-        //                     };
-        //             }) );
-        //         },
-        //
-        //         _removeIfInvalid: function( event, ui ) {
-        //
-        //             // 选择一项，不执行其他动作
-        //             if ( ui.item ) {
-        //                 return;
-        //             }
-        //
-        //             // 搜索一个匹配（不区分大小写）
-        //             var value = this.input.val(),
-        //                 valueLowerCase = value.toLowerCase(),
-        //                 valid = false;
-        //             this.element.children( "option" ).each(function() {
-        //                 if ( $( this ).text().toLowerCase() === valueLowerCase ) {
-        //                     this.selected = valid = true;
-        //                     return false;
-        //                 }
-        //             });
-        //
-        //             // 找到一个匹配，不执行其他动作
-        //             if ( valid ) {
-        //                 return;
-        //             }
-        //
-        //             // 移除无效的值
-        //             this.input
-        //                 .val( "" )
-        //                 .attr( "title", value + " didn't match any item" )
-        //                 .tooltip( "open" );
-        //             this.element.val( "" );
-        //             this._delay(function() {
-        //                 this.input.tooltip( "close" ).attr( "title", "" );
-        //             }, 2500 );
-        //             this.input.data( "ui-autocomplete" ).term = "";
-        //         },
-        //
-        //         _destroy: function() {
-        //             this.wrapper.remove();
-        //             this.element.show();
-        //         }
-        //     });
-        // })( jQuery );
-        //
-        // $(function() {
-        //     $( "#brand" ).combobox();
-        //
-        // });
+        (function( $ ) {
+            $.widget( "custom.combobox", {
+                _create: function() {
+                    this.wrapper = $( "<span>" )
+                        .addClass( "custom-combobox" )
+                        .insertAfter( this.element );
+
+                    this.element.hide();
+                    this._createAutocomplete();
+
+                },
+
+                _createAutocomplete: function() {
+                    var selected = this.element.children( ":selected" ),
+                        value = selected.val() ? selected.text() : "";
+                    this.input = $( "<input>" )
+                        .appendTo( this.wrapper )
+                        .val( value )
+                        .attr( "title", "" )
+                        .addClass( "custom-combobox-input ui-widget ui-widget-content ui-state-default ui-corner-left" )
+                        .autocomplete({
+                            delay: 0,
+                            minLength: 0,
+                            source: $.proxy( this, "_source" )
+                        })
+                        .tooltip({
+                            tooltipClass: "ui-state-highlight"
+                        });
+
+                    this._on( this.input, {
+                        autocompleteselect: function( event, ui ) {
+                            ui.item.option.selected = true;
+                            this._trigger( "select", event, {
+                                item: ui.item.option
+                            });
+                        },
+
+                        autocompletechange: "_removeIfInvalid"
+                    });
+                },
+
+
+
+                _source: function( request, response ) {
+                    var matcher = new RegExp( $.ui.autocomplete.escapeRegex(request.term), "i" );
+                    response( this.element.children( "option" ).map(function() {
+                        var text = $( this ).text();
+                        if ( this.value && ( !request.term || matcher.test(text) ) )
+                            return {
+                                label: text,
+                                value: text,
+                                option: this
+                            };
+                    }) );
+                },
+
+                _removeIfInvalid: function( event, ui ) {
+
+                    // 选择一项，不执行其他动作
+                    if ( ui.item ) {
+                        return;
+                    }
+
+                    // 搜索一个匹配（不区分大小写）
+                    var value = this.input.val(),
+                        valueLowerCase = value.toLowerCase(),
+                        valid = false;
+                    this.element.children( "option" ).each(function() {
+                        if ( $( this ).text().toLowerCase() === valueLowerCase ) {
+                            this.selected = valid = true;
+                            return false;
+                        }
+                    });
+
+                    // 找到一个匹配，不执行其他动作
+                    if ( valid ) {
+                        return;
+                    }
+
+                    // 移除无效的值
+                    this.input
+                        .val( "" )
+                        .attr( "title", value + " didn't match any item" )
+                        .tooltip( "open" );
+                    this.element.val( "" );
+                    this._delay(function() {
+                        this.input.tooltip( "close" ).attr( "title", "" );
+                    }, 2500 );
+                    this.input.data( "ui-autocomplete" ).term = "";
+                },
+
+                _destroy: function() {
+                    this.wrapper.remove();
+                    this.element.show();
+                }
+            });
+        })( jQuery );
+
+        $(function() {
+            $( "#brand" ).combobox();
+
+        });
 
 
     </script>
