--- a/tongzhousheche/src/main/resources/views/modules/manager/scparkcheck.html
+++ b/tongzhousheche/src/main/resources/views/modules/manager/scparkcheck.html
@@ -18,6 +18,10 @@
 <script src="../../plugins/layer/layer.js"></script>
 <script src="../../libs/bootstrap.min.js"></script>
 <script src="../../libs/vue.min.js"></script>
+    <script src="../../libs/jquery-ui.js"></script>
+    <script src="../../libs/jquery-ui.min.js"></script>
+    <script src="../../libs/validator.min.js"></script>
+	<link rel="stylesheet" href="../../css/jquery-ui.css">
 <script src="../../plugins/jqgrid/grid.locale-cn.js"></script>
 <script src="../../plugins/jqgrid/jquery.jqGrid.min.js"></script>
 <script src="../../plugins/ztree/jquery.ztree.all.min.js"></script>
@@ -26,6 +30,9 @@
 	.kuan{
 		width:190px;
 	}
+
+
+
 
 </style>
 </head>
@@ -44,15 +51,33 @@
 					<label style="font-size: medium">停车场区划：</label>
 				</div>
 				<div class="form-group col-sm-2 kuan">
-					<input type="text" class="form-control" id="park" v-model="q.park"
-						placeholder="停车场区划">
+					<!--<input type="text" class="form-control" id="park" v-model="q.park"
+						placeholder="停车场区划">-->
+					<select id="park" class="form-control" v-model="q.park" placeholder="停车场区划" style="width:160px;">
+						<option value =" ">-请选择-</option>
+						<option value ="海淀区">海淀区</option>
+						<option value ="朝阳区">朝阳区</option>
+						<option value ="通州区">通州区</option>
+						<option value ="西城区">西城区</option>
+						<option value ="东城区">东城区</option>
+						<option value ="大兴区">大兴区</option>
+						<option value ="密云区">密云区</option>
+						<option value ="丰台区">丰台区</option>
+						<option value ="顺义区">顺义区</option>
+						<option value ="石景山区">石景山区</option>
+						<option value ="门头沟区">门头沟区</option>
+						<option value ="昌平区">昌平区</option>
+						<option value ="怀柔区">怀柔区</option>
+						<option value ="平谷区">平谷区</option>
+						<option value ="延庆区">延庆区</option>
+						<option value ="大兴区">大兴区</option>
+					</select>
 				</div>
 				<div class="form-group col-sm-1">
 					<label style="font-size: medium">停车场地址：</label>
 				</div>
-				<div class="form-group col-sm-2 kuan">
-					<input type="text" class="form-control" id="address"
-						v-model="q.address" placeholder="停车场地址">
+				<div class="form-group col-sm-2 kuan" >
+					<input  class="form-control" id="address"  placeholder="停车场地址">
 				</div>
 				<div class="form-group col-sm-1">
 					<label style="font-size: medium">起始时间：</label>
@@ -87,33 +112,57 @@
 	     line-height: 42px;
       }
     </style>
-	<script>
-		var date = new Date();
-		if (qs == "" || qs == null) {
-			t1 = getDate(0);
-			t2 = getBeforeDate(0);
-			laydate.render({
-				elem : '#startTime',
-				value : t1,
-				type : 'datetime'
-			});
-			laydate.render({
-				elem : '#endTime',
-				value : t2,
-				type : 'datetime'
-			});
-		} else {
-			laydate.render({
-				elem : '#startTime',
-				value : qs,
-				type : 'datetime'
-			});
-			laydate.render({
-				elem : '#endTime',
-				value : js,
-				type : 'datetime'
-			});
-		}
+	<script language="javascript" type="text/javascript">
+        var availableAddress = [];
+        $(function() {
+
+            etcpName();
+            var date = new Date();
+            if (qs == "" || qs == null) {
+                t1 = getDate(0);
+                t2 = getBeforeDate(0);
+                laydate.render({
+                    elem : '#startTime',
+                    value : t1,
+                    type : 'datetime'
+                });
+                laydate.render({
+                    elem : '#endTime',
+                    value : t2,
+                    type : 'datetime'
+                });
+            } else {
+                laydate.render({
+                    elem : '#startTime',
+                    value : qs,
+                    type : 'datetime'
+                });
+                laydate.render({
+                    elem : '#endTime',
+                    value : js,
+                    type : 'datetime'
+                });
+            }
+        });
+
+        function etcpName() {
+            var url = "etcp/SearchEtcpMc";
+            $.ajax({
+                type : "POST",
+                url : baseURL + url,
+                contentType : "application/json",
+                success : function(obj) {
+                    var list = obj.list;
+                    availableAddress = [];
+                    for (var i = 0; i < list.length; i++) {
+                        availableAddress[i] = list[i].name;
+                    }
+                    $("#address").autocomplete({
+                        source : availableAddress
+                    });
+                }
+            });
+        }
 	</script>
 </body>
 </html>
